--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,7 @@
 body{
-    background-image: linear-gradient(to right, rgb(175, 248, 156), rgb(55, 190, 253));
-
+    background-image: url("../src/assets/bg.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+    background-size: cover;
 }
