some styling edits

--- a/src/Header/Header.module.css
+++ b/src/Header/Header.module.css
@@ -1,6 +1,6 @@
 .headerContainer {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
   padding: 0.5rem 2rem;
   position: relative;
@@ -34,6 +34,13 @@
   cursor: pointer;
   padding: 0.5rem;
   z-index: 1001;
+  transition: 0.5s;
+}
+
+.burgerMenu:hover{
+  background-color:rgba(240, 255, 255, 0.432);
+  border-radius: 5em;
+
 }
 
 .burgerLine {
@@ -80,9 +87,15 @@
   transition: color 0.2s, transform 0.2s, text-shadow 0.2s;
 }
 
+.navItem a {
+  padding: 0.5em;
+}
+
 .navItem a:hover {
-  color: hsl(0, 0%, 75%);
+  /* color: hsl(0, 0%, 75%); */
   transform: scale(1.2, 1.2);
+  background-color:rgba(240, 255, 255, 0.432);
+  border-radius: 5em;
 }
 
 .navItem a:active,
