--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,18 @@
+* {
+    padding: 0;
+    margin: 0;
+}
+
 body{
-    background-image: url("../src/assets/bg.png");
+   
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;
     background-size: cover;
+}
+
+.mainApp{
+ background-image: url("../src/assets/bg.png");
+ height: 100vh;
+ background-size: 100% 100%;
 }
