--- a/src/index.css
+++ b/src/index.css
@@ -5,12 +5,22 @@
 
 
 .mainApp {
-  background-image: url("../src/assets/bg.png");
+  background-image: url("../src/assets/bg.jpg");
   height: 100vh;
   background-repeat: no-repeat;
   background-position: center;
+  background-attachment: fixed;
   background-size:100% 105%;
 }
+
+.cardsPage{
+  height: 100vh;
+  background-image: linear-gradient(to right,#171628, #242335);
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
 ::-webkit-scrollbar {
   width: 14px;
 }
@@ -32,5 +42,5 @@
 
 html {
   scrollbar-width: thin;
-  scrollbar-color: #47474a #f1f1f1;
+  scrollbar-color: #747474 #302e38;
 }
