--- a/src/index.css
+++ b/src/index.css
@@ -14,10 +14,10 @@
 }
 
 .cardsPage{
-  height: 100vh;
+  min-height: 100vh;
   background-image: linear-gradient(to right,#171628, #242335);
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
 }
 
@@ -48,6 +48,7 @@ html {
 @media (max-width: 768px) {
   .cardsPage {
     flex-direction: column;
-    gap: 2%;
+    gap: 5em;
+    padding: 3em 0;
   }
 }
