--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -1,10 +1,15 @@
 .headerContainer {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: var(--header-height);
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  padding: 1rem 5rem;
-  position: relative;
+  justify-content: space-between;
+  padding: 0 3rem;
   gap: 0.8em;
+  z-index: 1000;
 }
 
 .headerContainer a{
@@ -170,7 +175,7 @@
   background-image: none;
   background-color: rgba(240, 255, 255, 0.45);
   color: white;
-  padding: 1em 2em;
+  padding: 1em 4em;
   border-radius: 5em;
   border: none;
   text-align: center;
@@ -269,6 +274,9 @@
 
   .dropDownMenu li:hover {
     padding-left: 2rem;
+  }
+  .ActiveLink{
+  background-color: rgba(70, 55, 60, 0.3);
   }
 }
 
