--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -1,3 +1,8 @@
+*{
+  margin: 0;
+  padding: 0;
+}
+
 .headerContainer {
   position: fixed;
   top: 0;
@@ -8,11 +13,11 @@
   align-items: center;
   justify-content: space-between;
   padding: 0 3rem;
-  gap: 0.8em;
+  /* gap: 0.8em; */
   z-index: 1000;
 }
 
-.headerContainer a{
+.headerContainer a {
   text-decoration: none;
 }
 
@@ -31,9 +36,7 @@
 }
 
 .logoPic {
-  width: 15%;
-  max-width: 80px;
-  min-width: 40px;
+  width: 40px;
 }
 
 .burgerMenu {
@@ -182,7 +185,7 @@
   cursor: pointer;
 }
 
-.ActiveLink{
+.ActiveLink {
   background-color: rgb(68, 51, 54);
 }
 /* Mobile Responsive Styles */
@@ -275,8 +278,8 @@
   .dropDownMenu li:hover {
     padding-left: 2rem;
   }
-  .ActiveLink{
-  background-color: rgba(70, 55, 60, 0.3);
+  .ActiveLink {
+    background-color: rgba(70, 55, 60, 0.3);
   }
 }
 
