--- a/src/Components/InfoCard/InfoCard.module.css
+++ b/src/Components/InfoCard/InfoCard.module.css
@@ -6,6 +6,10 @@
     background-color: white;
     padding: 2rem;
     border-radius: 1rem;
+    box-shadow:
+        0 8px 25px rgba(164, 28, 108, 0.2),
+        0 4px 12px rgba(164, 28, 108, 0.15);
+    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
 }
 .cardContainer h3{
     color: hsl(0, 0%, 25%);
@@ -14,8 +18,15 @@
 }
 .cardContainer p{
     font-family: sans-serif;
+    color: black;
     font-size: 1.75rem;
 }
+.cardContainer p span > span{
+  background-color: black;
+  height: 0.75em;
+  
+}
+
 
 @media (max-width: 768px){
     .cardContainer{
