--- a/src/Pages/Dashboard/Dashboard.module.css
+++ b/src/Pages/Dashboard/Dashboard.module.css
@@ -1,18 +1,32 @@
-.homeContainer {
-  background-image: linear-gradient(to right,#171628, #242335);
-  position: absolute;
-  top: 0;
-  left: 0;
-  min-height: 100vh;
-  max-height: 250vh;
-  width: 100vw;
+.landingWrapper {
+  height: 100vh;                 /* full viewport */
+  overflow-y: auto;              /* allow internal scrolling */
+  scroll-snap-type: y mandatory;
+  scroll-behavior: smooth;
 }
-.homeContainer > h1{
-    color: white;
+.landing {
+  min-height: 100vh;
+  width: 100%;
+  scroll-snap-align: start;
+  padding-top: calc(var(--header-height));
+  padding-bottom: 2rem;
+  scroll-margin-top: var(--header-height);
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+}
+
+.CardsLanding {
+  composes: landing;
+  background-color: white;
+}
+
+.CardsLanding > h1{
+    color: black;
     font-family: sans-serif;
-    font-size: 2rem;
+    font-size: 4rem;
     font-weight: bold;
-    margin: 5% 0 5% 5%;
+    margin: 5% 0 0 5%;
 }
 
 .cardsContainer{ 
@@ -23,31 +37,27 @@
     margin: auto;
 }
 
-.earthMap{
-    width: 60%;
-    margin: auto;
-    border: 1px solid rgb(255, 255, 255);
-    border-radius: 1rem;
-    margin-top: 10%;
+.MapLanding {
+  composes: landing;
+  background-color: white;
 }
-
-.earthMap img{
-    width: 100%;
-    height: 100%;
+.earthMap{
+    width: 80%;
+    margin: auto;
+    box-shadow:
+        0 8px 25px rgba(164, 28, 108, 0.2),
+        0 4px 12px rgba(164, 28, 108, 0.15);
     border-radius: 1rem;
 }
 
 .filtersContainer{
     width: 80%;
     margin: auto;
-    margin-top: 5%;
     display: flex;
+    flex-direction: column;
     justify-content: space-around;
-    border: 1px solid #E2E8F0;
-    border-radius: 0.5rem;
+    align-items: center;
     box-sizing: border-box;
-    padding: 2.5rem;
-    background-image: linear-gradient(to right,#171628, #524E8E);
     transition: all 0.2s;
 }
 
@@ -56,6 +66,7 @@
     border: none;
     border-radius: 0.25rem;
     padding: 0.5rem;
+    background-color: #171628;
 }
 
 @media (max-width: 768px){
